--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "chart.js": "^4.1.2",
     "mini-svg-data-uri": "^1.4.4",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.40",
     "vue": "^3.2.33",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.15",
+    "vue3-popper": "^1.5.0",
     "vuex": "^4.0.2"
   },
   "browser": {
