--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -45,5 +45,5 @@ jobs:
           export SSHPASS="$SSH_PASS"
           sshpass -e scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null stage_build.zip "$SSH_USER"@"$SSH_SERVER":"$BUILD_DIRECTORY"
           sshpass -e scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null stage_build.sh "$SSH_USER"@"$SSH_SERVER":"$BUILD_DIRECTORY"
-          sshpass -e ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null "$SSH_USER"@"$SSH_SERVER" chmod 0755 "$BUILD_DIRECTORY"/stage_build.sh
-          sshpass -e ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null "$SSH_USER"@"$SSH_SERVER" "$BUILD_DIRECTORY"/stage_build.sh
+          sshpass -e ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null "$SSH_USER"@"$SSH_SERVER" chmod 0755 "$BUILD_DIRECTORY"/build.sh
+          sshpass -e ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null "$SSH_USER"@"$SSH_SERVER" "$BUILD_DIRECTORY"/build.sh
