--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm run development
 
       - name: Zip package
-        run: zip -r stage_build.zip app bootstrap config database public resources mobile routes tests vendor artisan composer.json composer.lock server.php -q
+        run: zip -r build.zip app bootstrap config database public resources mobile routes tests vendor artisan composer.json composer.lock server.php -q
 
       - name: Upload and deploy package
         shell: bash
@@ -43,7 +43,7 @@ jobs:
 
         run: |
           export SSHPASS="$SSH_PASS"
-          sshpass -e scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null stage_build.zip "$SSH_USER"@"$SSH_SERVER":"$BUILD_DIRECTORY"
-          sshpass -e scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null stage_build.sh "$SSH_USER"@"$SSH_SERVER":"$BUILD_DIRECTORY"
+          sshpass -e scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null build.zip "$SSH_USER"@"$SSH_SERVER":"$BUILD_DIRECTORY"
+          sshpass -e scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null build.sh "$SSH_USER"@"$SSH_SERVER":"$BUILD_DIRECTORY"
           sshpass -e ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null "$SSH_USER"@"$SSH_SERVER" chmod 0755 "$BUILD_DIRECTORY"/build.sh
           sshpass -e ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null "$SSH_USER"@"$SSH_SERVER" "$BUILD_DIRECTORY"/build.sh
